@@ -18,6 +18,7 @@
 
 import TAT
 import tetragono as tet
+from tetragono.common_tensor.tensor_toolkit import half_reverse
 
 
 def abstract_state(L1, L2, t, U, mu, side=1):
@@ -49,17 +50,17 @@ def abstract_state(L1, L2, t, U, mu, side=1):
     CSCS = tet.common_tensor.Fermi_Hubbard.CSCS.to(float)
     single_site = U * NN - mu * (N0 + N1)
     tCC = -t * CSCS
+    single_site_double_side = [single_site, half_reverse(single_site.conjugate())]
+    tCC_double_side = [tCC, half_reverse(tCC.conjugate())]
     for layer in range(side):
-        # Hamiltonian for the second layer should be transposed
-        # (transpose but not conjugate, or conjugate but not transpose),
-        # But the hamiltonian is real, so nothing to do here
+        # The hamiltonian in second layer is conjugate and half reverse of the first layer.
         for l1 in range(L1):
             for l2 in range(L2):
-                state.hamiltonians[(l1, l2, layer),] = single_site
+                state.hamiltonians[(l1, l2, layer),] = single_site_double_side[layer]
                 if l1 != 0:
-                    state.hamiltonians[(l1 - 1, l2, layer), (l1, l2, layer)] = tCC
+                    state.hamiltonians[(l1 - 1, l2, layer), (l1, l2, layer)] = tCC_double_side[layer]
                 if l2 != 0:
-                    state.hamiltonians[(l1, l2 - 1, layer), (l1, l2, layer)] = tCC
+                    state.hamiltonians[(l1, l2 - 1, layer), (l1, l2, layer)] = tCC_double_side[layer]
     return state
 
 
